2020-03-20  Alex Christensen  <achristensen@webkit.org>

        CORS-disabling SPI introduced in r253978 should make responses non-opaque
        https://bugs.webkit.org/show_bug.cgi?id=209351
        <rdar://problem/60024850>

        Reviewed by Chris Dumez.

        * TestWebKitAPI/Tests/WebKitCocoa/WKURLSchemeHandler-1.mm:

2020-03-20  Aakash Jain  <aakash_jain@apple.com>

        commit-queue should skip building and testing if patch already passed tests on mac-wk2 queue
        https://bugs.webkit.org/show_bug.cgi?id=208938

        Reviewed by Jonathan Bedard.

        * BuildSlaveSupport/ews-build/steps.py:
        (RunWebKitTests.doStepIf): Skip testing if patch already passed mac-wk2 tests.
        (CheckPatchStatusOnEWSQueues): Build-step to check patch status on other queues.
        (CheckPatchStatusOnEWSQueues.get_patch_status):
        (CheckPatchStatusOnEWSQueues.start):
        * BuildSlaveSupport/ews-build/steps_unittest.py:
        (test_skip_for_mac_wk2_passed_patch_on_commit_queue): Added unit-tests.
        * BuildSlaveSupport/ews-build/factories.py: Added build-step to check the patch status on other queues.
        * BuildSlaveSupport/ews-build/factories_unittest.py: Updated unit-test.
        * BuildSlaveSupport/ews-app/ews/views/statusbubble.py: Added the new step status to STEPS_TO_HIDE.

2020-03-20  Aakash Jain  <aakash_jain@apple.com>

        [ews] Better organize patch status api data
        https://bugs.webkit.org/show_bug.cgi?id=209342

        Reviewed by Jonathan Bedard.

        * BuildSlaveSupport/ews-app/ews/views/status.py:
        (Status._build_status):
        (Status._build_statuses_for_patch): Updated to return dictionary instead of list.
        (Status.get): Remove safe=false now that we are returning a dictionary.

2020-03-20  Tim Horton  <timothy_horton@apple.com>

        Upstream a variety of Cocoa-platform HAVE and ENABLE macros
        https://bugs.webkit.org/show_bug.cgi?id=209307
